# squaresolver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  squaresolver.sln  squaresolver.vcxproj  squaresolver.vcxproj.filters
src/: CMakeLists.txt  main.cpp
src/commonlibs/: CMakeLists.txt  blockingqueue.cpp  blockingqueue.hpp  consumer.cpp  consumer.hpp  monitor.hpp  producer.cpp  producer.hpp  producercin.cpp  producercin.hpp  quadraticequation.hpp  quadraticequationworker.hpp  quadricequation.cpp  quadricequation.hpp  quadricequationworker.hpp  simpletaskconsumer.cpp  simpletaskworker.hpp  solver.cpp  solver.hpp  workerbase.cpp  workerbase.hpp
test/: CMakeLists.txt  simpletaskconsumer.cpp  simpletaskconsumer.hpp  simpletaskgenerator.cpp  simpletaskgenerator.hpp  simpletaskworker.hpp  testmain.cpp
